can add user data

--- a/templates/views/admin/publications.jade
+++ b/templates/views/admin/publications.jade
@@ -122,7 +122,7 @@ block content
                                 .modal-header
                                     button.close(type='button', data-dismiss='modal', aria-label='Close')
                                         span(aria-hidden='true') ×
-                                    h4#createPublicationLine.modal-title Create a new Publication Line
+                                    h4#createPublicationLineLabel.modal-title Create a new Publication Line
                                 .modal-body
                                     .row
                                         .col-md-12   
