--- a/templates/views/admin/users.jade
+++ b/templates/views/admin/users.jade
@@ -3,27 +3,72 @@ extends ../../layouts/admin-default
 block content
     .row
         .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-2.main
-            if data.users.length > 0
-                .row
-                    .col-md-6
-                        input.form-control(type='text', placeholder='Search..')
-                    .col-md-2
-                        button.btn.btn-success(type='button') Create User 
-                .table-responsive   
-                    table.table.table-striped
-                        thead
-                        tr
-                            th Name
-                            th Email
-                            th Can access keystone
-                        tbody
-                        each user in data.users
-                            tr   
-                                td 
-                                    a(href='/admin/users/' + user._id) #{user.name.first +' '+ user.name.last}
-                                td #{user.email}
-                                td #{user.canAccessKeystone}
-            else
-                .jumbotron
-                    h3 No User found
-                    button.btn.btn-success(type='button') Create User
+            form.form-group.row(method='post', action='/admin/users')
+                input(type='hidden', name='action', value='createUser')
+                if data.users.length > 0
+                    .row
+                        .col-md-6
+                            input.form-control(type='text', placeholder='Search..')
+                        .col-md-2
+                            button.btn.btn-success(type='button', data-toggle='modal', data-target='#createUser') Create User 
+                    .table-responsive   
+                        table.table.table-striped
+                            thead
+                            tr
+                                th Name
+                                th Email
+                                th Can access keystone
+                            tbody
+                            each user in data.users
+                                tr   
+                                    td 
+                                        a(href='/admin/users/' + user._id) #{user.name.first +' '+ user.name.last}
+                                    td #{user.email}
+                                    td #{user.canAccessKeystone}
+                else
+                    .jumbotron
+                        h3 No User found
+                        button.btn.btn-success(type='button', data-toggle='modal', data-target='#createUser') Create User
+                #createUser.modal.fade(tabindex='-1', role='dialog', aria-labelledby='createUserLabel')
+                    .modal-dialog(role='document')
+                        .modal-content
+                            .modal-header
+                                button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                    span(aria-hidden='true') ×
+                                h4#createUserLabel.modal-title Create a new User
+                            .modal-body
+                                .row
+                                    .col-md-6   
+                                        label First Name
+                                        input.form-control(type='text', placeholder='First Name', name='first')
+                                    .col-md-6   
+                                        label Last Name
+                                        input.form-control(type='text', placeholder='First Name', name='last')
+                                .row
+                                    .col-md-12
+                                        label Email
+                                        input.form-control(type='email', placeholder='Email', name='email')
+                                .row
+                                    .col-md-12
+                                        label Password
+                                        input.form-control(type='password', placeholder='Password', name='password')
+                                .row
+                                    .col-md-6
+                                        label Birthday
+                                        input.form-control(type='date', name='birthday')
+                                .row    
+                                    .col-sm-9
+                                        label Consumer Type
+                                        select.form-control(name='consumerType')
+                                            option Researcher
+                                            option Business/Private Sector
+                                            option Policy Maker
+                                            option Other
+                                .row
+                                    .col-sm-6
+                                        label Contact Number
+                                        input.form-control(type='text', placeholder='09*********', name='contactNumber')
+                                
+                            .modal-footer                                    
+                                button.btn.btn-primary(type='submit', name='createUser') Create
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
