added modal on analytics delete

--- a/templates/views/admin/authors_profile.jade
+++ b/templates/views/admin/authors_profile.jade
@@ -16,6 +16,18 @@ block content
                         label Organization
                         input.form-control(type='text', value= data.authors.organization, placeholder='Organization', name='organization')
                 button.btn.btn-primary(type='submit', name='editAuthor') Save
-            form.form-group.row(method='post', action='/admin/authors/'+data.authors._id)
-                input(type='hidden', name='action', value='deleteAuthor')
-                button.btn.btn-link(type='submit', name='deleteAuthor') Delete Author
+                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteAuthor') Delete Author
+            #deleteAuthor.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteAuthorLabel')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                            h4#deleteAuthorLabel.modal-title #{'Are you sure you want to delete '+data.authors.name+'?'}
+                        .modal-body
+                            p This cannot be undone
+                        .modal-footer
+                            form.form-group.row(method='post', action='/admin/author/'+data.authors._id)
+                                input(type='hidden', name='action', value='deleteAuthor')  
+                                button.btn.btn-danger(type='submit', name='deleteAuthor') Delete
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
