--- a/templates/views/admin/groupViews_profile.jade
+++ b/templates/views/admin/groupViews_profile.jade
@@ -36,6 +36,18 @@ block content
                 p Loc
             .col-md-3    
                 mark #{data.group_views.loc}
-        form.form-group.row(method='post', action='/admin/group-views/'+data.group_views._id)
-                input(type='hidden', name='action', value='deleteGroupView')
-                button.btn.btn-link(type='submit', name='deleteGroupView') Delete Group View
+        button.btn.btn-link(type='submit', data-toggle='modal', data-target='#deleteGroupView') Delete Group View
+    #deleteGroupView.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteGroupViewLabel')
+        .modal-dialog(role='document')
+            .modal-content
+                .modal-header
+                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                        span(aria-hidden='true') ×
+                    h4#deleteGroupViewLabel.modal-title #{'Are you sure you want to delete '+data.group_views._id+'?'}
+                .modal-body
+                    p This cannot be undone
+                .modal-footer
+                    form.form-group.row(method='post', action='/admin/group-views/'+data.group_views._id)
+                        input(type='hidden', name='action', value='deleteGroupView')  
+                        button.btn.btn-danger(type='submit', name='deleteGroupView') Delete
+                        button.btn.btn-default(type='button', data-dismiss='modal') Close
