--- a/templates/views/admin/user_profile.jade
+++ b/templates/views/admin/user_profile.jade
@@ -135,7 +135,7 @@ block content
                     .modal-header
                         button.close(type='button', data-dismiss='modal', aria-label='Close')
                             span(aria-hidden='true') ×
-                        h4#deleteUserLabel.modal-title Are you sure you want to delete this user?
+                        h4#deleteUserLabel.modal-title #{'Are you sure you want to delete '+data.user.name.first+' '+ data.user.name.last+'?'}
                     .modal-body
                         p This cannot be undone
                     .modal-footer
