--- a/templates/views/admin/learningObjects_profile.jade
+++ b/templates/views/admin/learningObjects_profile.jade
@@ -46,6 +46,18 @@ block content
                     .col-md-2
                         mark #{data.learning_objects.publishedAt}
                 button.btn.btn-primary(type='submit', name='editLearningObject') Save
-            form.form-group.row(method='post', action='/admin/learning-objects/'+data.learning_objects._id)
-                input(type='hidden', name='action', value='deleteLearningObject')
-                button.btn.btn-link(type='submit', name='deleteLearningObject') Delete Learning Object
+                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLearningObject') Delete Learning Object
+            #deleteLearningObject.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLearningObjectLabel')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                            h4#deleteLearningObjectLabel.modal-title #{'Are you sure you want to delete '+data.learning_objects.title+'?'}
+                        .modal-body
+                            p This cannot be undone
+                        .modal-footer
+                            form.form-group.row(method='post', action='/admin/learning-objects/'+data.learning_objects._id)
+                                input(type='hidden', name='action', value='deleteLearningObject')  
+                                button.btn.btn-danger(type='submit', name='deleteLearningObject') Delete
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
