--- a/templates/views/admin/lindustries_profile.jade
+++ b/templates/views/admin/lindustries_profile.jade
@@ -10,6 +10,18 @@ block content
                 h5.help-block #{'Key: ' + data.lindustries.key}
                 h5.help-block #{'ID: ' + data.lindustries._id}
                 button.btn.btn-primary(type='submit') Save
-            form.form-group.row(method='post', action='/admin/lindustries/'+data.lindustries._id)
-                input(type='hidden', name='action', value='deleteLIndustry')
-                button.btn.btn-link(type='submit', name='deleteLIndustry') Delete LIndustry
+                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLIndustry') Delete LIndustry
+            #deleteLIndustry.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLIndustryLabel')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                            h4#deleteLIndustryLabel.modal-title #{'Are you sure you want to delete '+data.lindustries.name+'?'}
+                        .modal-body
+                            p This cannot be undone
+                        .modal-footer
+                            form.form-group.row(method='post', action='/admin/lindustries/'+data.lindustries._id)
+                                input(type='hidden', name='action', value='deleteLIndustry')  
+                                button.btn.btn-danger(type='submit', name='deleteLIndustry') Delete
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
