--- a/templates/views/admin/lofileUpload_profile.jade
+++ b/templates/views/admin/lofileUpload_profile.jade
@@ -55,6 +55,18 @@ block content
                     label File Type
                     
             button.btn.btn-primary(type='submit') Save
-        form.form-group.row(method='post', action='/admin/lofile-uploads/'+data.lofile_uploads._id)
-                input(type='hidden', name='action', value='deleteLOFileUpload')
-                button.btn.btn-link(type='submit', name='deleteLOFileUpload') Delete LOFile Upload
+            button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLOFileUpload') Delete LIndustry
+            #deleteLOFileUpload.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLOFileUploadLabel')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                            h4#deleteLOFileUploadLabel.modal-title #{'Are you sure you want to delete '+data.lofile_uploads.name+'?'}
+                        .modal-body
+                            p This cannot be undone
+                        .modal-footer
+                            form.form-group.row(method='post', action='/admin/lofile-uploads/'+data.lofile_uploads._id)
+                                input(type='hidden', name='action', value='deleteLOFileUpload')  
+                                button.btn.btn-danger(type='submit', name='deleteLOFileUpload') Delete
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
