--- a/templates/views/admin/lsectors_profile.jade
+++ b/templates/views/admin/lsectors_profile.jade
@@ -20,6 +20,18 @@ block content
                             each li,i in data.lindustries
                                 option(value=i) #{li.name}
                 button.btn.btn-primary(type='submit') Save  
-            form.form-group.row(method='post', action='/admin/lsectors/'+data.lsectors._id)
-                input(type='hidden', name='action', value='deleteLSector')
-                button.btn.btn-link(type='submit', name='deleteLSector') Delete LSector
+                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLSector') Delete LSector
+            #deleteLSector.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLSectorLabel')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                            h4#deleteLSectorLabel.modal-title #{'Are you sure you want to delete '+data.lsectors.name+'?'}
+                        .modal-body
+                            p This cannot be undone
+                        .modal-footer
+                            form.form-group.row(method='post', action='/admin/lsectors/'+data.lsectors._id)
+                                input(type='hidden', name='action', value='deleteLSector')  
+                                button.btn.btn-danger(type='submit', name='deleteLSector') Delete
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
