--- a/templates/views/admin/publicationsSettings_profile.jade
+++ b/templates/views/admin/publicationsSettings_profile.jade
@@ -25,7 +25,19 @@ block content
                         label Publications Heading
                         input.form-control(type='text', value= data.publications_settings.publicationsHeading, placeholder='Publications Heading', name='publicationsHeading')
                 button.btn.btn-primary(type='submit', name='editPublciationSetting') Save   
-            form.form-group.row(method='post', action='/admin/publication-settings/'+data.publications_settings._id)
-                input(type='hidden', name='action', value='deletePublicationSetting')
-                button.btn.btn-link(type='submit', name='deletePublicationSetting') Delete Publication Setting
+                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deletePublicationSetting') Delete Publication
+            #deletePublicationSetting.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deletePublicationSettingLabel')
+                .modal-dialog(role='document')
+                    .modal-content
+                        .modal-header
+                            button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                span(aria-hidden='true') ×
+                            h4#deletePublicationSettingLabel.modal-title #{'Are you sure you want to delete '+data.publications_settings.name+'?'}
+                        .modal-body
+                            p This cannot be undone
+                        .modal-footer
+                            form.form-group.row(method='post', action='/admin/publication-settings/'+data.publications_settings._id)
+                                input(type='hidden', name='action', value='deletePublicationSetting')  
+                                button.btn.btn-danger(type='submit', name='deletePublicationSetting') Delete
+                                button.btn.btn-default(type='button', data-dismiss='modal') Close
                 
