--- a/templates/views/admin/authors_profile.jade
+++ b/templates/views/admin/authors_profile.jade
@@ -27,7 +27,7 @@ block content
                         .modal-body
                             p This cannot be undone
                         .modal-footer
-                            form.form-group.row(method='post', action='/admin/author/'+data.authors._id)
+                            form.form-group.row(method='post', action='/admin/authors/'+data.authors._id)
                                 input(type='hidden', name='action', value='deleteAuthor')  
                                 button.btn.btn-danger(type='submit', name='deleteAuthor') Delete
                                 button.btn.btn-default(type='button', data-dismiss='modal') Close
