--- a/templates/views/admin/lovideos_profile.jade
+++ b/templates/views/admin/lovideos_profile.jade
@@ -13,7 +13,7 @@ block content
                 .row
                     .col-md-7
                         label Youtube URL
-                        input.form-control(type='text', value= data.lovideos.url, placeholder='URL')
+                        input.form-control(type='url', value= data.lovideos.url, placeholder='URL')
                 .row
                     .col-md-7
                         label Description
